CSS style moved to common file

--- a/index.html
+++ b/index.html
@@ -1,69 +1,33 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
 <title>Derek OK9SGC</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
-<style>
-@font-face {
-  font-family: 'Play';
-  src: url('fonts/Play/Play-Regular.ttf')  format('truetype');
-}
-* {
-  color: white;
-  background-color: transparent;
-  text-decoration: none;
-  text-align: center;
-  font-family: Play;
-}
-a:link {
-  color: #7199ea;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:visited {
-  color: #7199ea;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #dddbf8;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:active {
-  color: yellow;
-  background-color: transparent;
-  text-decoration: underline;
-}
-</style> 
+<link rel="stylesheet" href="styles/default.css">
 </head>
-<body style="background-color:#080818;padding-left:15%;padding-right:15%;padding-top:5%">
 
-<h1 style="color:#c0ce43;">Derek OK9SGC</h1>
+<body style="text-align: center;">
+
+<h1>Derek OK9SGC</h1>
 
 <p>Welcome to my site. Here you will find a random assortment of information and topics related to amateur radio, with a heavy focus on amateur satellite reception. To see more of my content or to contact me, check out my social media links below;</p>
-
 <p><a href="https://twitter.com/dereksgc" target="_blank">Twitter</a> - <a href="https://mas.to/web/@dereksgc" target="_blank">Mastodon</a> - <a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> - <a href="https://github.com/sgcderek" target="_blank">GitHub</a> - <a href="https://www.thingiverse.com/derekcz/designs" target="_blank">Thingiverse</a></p>
-
 <p>If you would like to support me and what I do, consider visiting my <a href="https://ko-fi.com/dereksgc" target="_blank">Ko-fi</a> page. Anything helps. Special thanks to;</p>
-
-<p><span style="color: #00994d;">microp11 - thebaldgeek - Xerbo - yakko warner - @BackHive - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente</span></p>
+<p><span style="color: #00994d;">microp11 - thebaldgeek - Xerbo - yakko warner - BackHive - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente</span></p>
 
 <hr class="solid">
 
-<p style="text-align: center;center;line-height: 1.8;">
+<p style="line-height: 1.8;">
 <a href="tools/helix-calc.html">Helical antenna calculator</a><br />
 <a href="tools/ATA.html">Asymmetric turnstile antenna</a></p>
 
 <hr class="solid">
 
-<h2 style="color:#c0ce43;">Blog articles</h2>
-
-<p style="text-align: center;center;line-height: 1.8;">
+<h2>Blog articles</h2>
+<p style="line-height: 1.8;">
 <a href="blog/meteor-may-2022.html">Meteor-M N2 May 2022 loss of orientation</a><br />
 <a href="blog/meridian-tv.html">Analog UHF TV DXing using a Russian military satellite</a><br />
 <a href="blog/kgstv-reception.html">How to receive and decode KG-STV image transmissions</a><br />
