Relative paths fixup

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Derek OK9SGC</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
-<link rel="stylesheet" href="styles/default.css">
+<link rel="stylesheet" href="/styles/default.css">
 </head>
 
 <body style="text-align: center;">
@@ -21,20 +21,21 @@
 <hr class="solid">
 
 <p style="line-height: 1.8;">
-<a href="tools/helix-calc.html">Helical antenna calculator</a><br />
-<a href="tools/ATA.html">Asymmetric turnstile antenna</a></p>
+<a href="/sat-reception/">AMATEUR SATELLITE RECEPTION</a><br />
+<a href="/tools/helix-calc.html">Helical antenna calculator</a><br />
+<a href="/tools/ATA.html">Asymmetric turnstile antenna</a></p>
 
 <hr class="solid">
 
 <h2>Blog articles</h2>
 <p style="line-height: 1.8;">
-<a href="blog/meteor-may-2022.html">Meteor-M N2 May 2022 loss of orientation</a><br />
-<a href="blog/meridian-tv.html">Analog UHF TV DXing using a Russian military satellite</a><br />
-<a href="blog/kgstv-reception.html">How to receive and decode KG-STV image transmissions</a><br />
-<a href="blog/beginner-hrpt-guide.html">Beginner's guide to HRPT reception</a><br />
-<a href="blog/lnb-high-band-mod.html">Hard-wiring an LNB to use the high band 10.6 GHz oscillator</a><br />
-<a href="blog/starlink-beacons.html">Receiving Starlink satellite beacons on a budget</a><br />
-<a href="blog/noaa2-revival.html">NOAA-2 returning from the dead</a></p>
+<a href="/blog/meteor-may-2022.html">Meteor-M N2 May 2022 loss of orientation</a><br />
+<a href="/blog/meridian-tv.html">Analog UHF TV DXing using a Russian military satellite</a><br />
+<a href="/blog/kgstv-reception.html">How to receive and decode KG-STV image transmissions</a><br />
+<a href="/blog/beginner-hrpt-guide.html">Beginner's guide to HRPT reception</a><br />
+<a href="/blog/lnb-high-band-mod.html">Hard-wiring an LNB to use the high band 10.6 GHz oscillator</a><br />
+<a href="/blog/starlink-beacons.html">Receiving Starlink satellite beacons on a budget</a><br />
+<a href="/blog/noaa2-revival.html">NOAA-2 returning from the dead</a></p>
 
 </body>
 </html>
