--- a/404.html
+++ b/404.html
@@ -4,49 +4,14 @@
 <title>404</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
-<style>
-@font-face {
-  font-family: 'Play';
-  src: url('https://sgcderek.github.io/fonts/Play/Play-Regular.ttf')  format('truetype');
-}
-* {
-  color: white;
-  background-color: transparent;
-  text-decoration: none;
-  text-align: center;
-  font-family: Play;
-}
-a:link {
-  color: #7199ea;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:visited {
-  color: #7199ea;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #dddbf8;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:active {
-  color: yellow;
-  background-color: transparent;
-  text-decoration: underline;
-}
-</style> 
+<link rel="stylesheet" href="/styles/default.css">
 </head>
-<body style="background-color:#080818;padding-left:15%;padding-right:15%;padding-top:5%">
+<body style="text-align: center;">
 
-<h1 style="color:#c0ce43;">404</h1>
+<h1>404</h1>
 
 <p>The page you are looking for does not exist.</p>
 <p>It might have been renamed or moved - check that your URL is correct.</p>
-<p>If you followed an external link that doesn't work anymore, go to the <a href="https://sgcderek.github.io/">home page</a> and see if you can find what you are looking for.</p>
+<p>If you followed an external link that doesn't work anymore, go to the <a href="/">home page</a> and see if you can find what you are looking for.</p>
 </body>
 </html>
