--- a/tools/helix-calc.html
+++ b/tools/helix-calc.html
@@ -7,7 +7,7 @@
 <style>
 @font-face {
   font-family: 'Play';
-  src: url('../fonts/Play/Play-Regular.ttf')  format('truetype');
+  src: url('/fonts/Play/Play-Regular.ttf')  format('truetype');
 }
 * {
   color: white;
