--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p>Welcome to my site. Here you will find a random assortment of information and topics related to amateur radio, with a heavy focus on amateur satellite reception. To see more of my content or to contact me, check out my social media links below;</p>
 <p><a href="https://twitter.com/dereksgc" target="_blank">Twitter</a> - <a href="https://mas.to/web/@dereksgc" target="_blank">Mastodon</a> - <a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> - <a href="https://github.com/sgcderek" target="_blank">GitHub</a> - <a href="https://www.thingiverse.com/derekcz/designs" target="_blank">Thingiverse</a></p>
 <p>If you would like to support me and what I do, consider visiting my <a href="https://ko-fi.com/dereksgc" target="_blank">Ko-fi</a> page. Anything helps. Special thanks to;</p>
-<p><span style="color: #00994d;">microp11 - thebaldgeek - Xerbo - yakko warner - BackHive - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente</span></p>
+<p><span style="color: #00994d;">microp11 - thebaldgeek - Xerbo - Whatwhatphysics - yakko warner - BackHive - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente</span></p>
 
 <hr class="solid">
 
