--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 <h2>Blog articles</h2>
 <p style="line-height: 1.8;">
+<a href="/blog/CGMS50.html">CGMS 50 weather satellite status summary</a><br />
 <a href="/blog/meteor-may-2022.html">Meteor-M N2 May 2022 loss of orientation</a><br />
 <a href="/blog/meridian-tv.html">Analog UHF TV DXing using a Russian military satellite</a><br />
 <a href="/blog/kgstv-reception.html">How to receive and decode KG-STV image transmissions</a><br />
