--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
 
 <hr class="solid">
 
-<h2>Blog articles</h2>
+<h2>Blog articles and videos</h2>
 <p style="line-height: 1.8;">
+<a href="https://www.youtube.com/watch?v=FCzozVMxCFs">[Video] The V-dipole antenna</a><br />
 <a href="/blog/noaa-21-briefing.html">All you need to know about the upcoming NOAA-21 satellite</a><br />
+<a href="https://www.youtube.com/watch?v=8S4qm2YeQQw" target="_blank">[Video] Decoding high-quality images from Meteor-M LRPT</a><br />
 <a href="/blog/artemis-1.html">Artemis I mission radio frequency allocations</a><br />
+<a href="https://www.youtube.com/watch?v=A8fhEi3FuA4" target="_blank">[Video] How to decode and understand NOAA APT</a><br />
 <a href="/blog/CGMS50.html">CGMS 50 weather satellite status summary</a><br />
 <a href="/blog/meteor-may-2022.html">Meteor-M N2 May 2022 loss of orientation</a><br />
 <a href="/blog/meridian-tv.html">Analog UHF TV DXing using a Russian military satellite</a><br />
