--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h1>Derek OK9SGC</h1>
 
 <p>Welcome to my site. Here you will find a random assortment of information and topics related to amateur radio, with a heavy focus on amateur satellite reception. To see more of my content or to contact me, check out my social media links below;</p>
-<p><a href="https://mas.to/@dereksgc" target="_blank">Mastodon</a> - <a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> - <a href="https://github.com/sgcderek" target="_blank">GitHub</a> - <a href="https://www.thingiverse.com/derekcz/designs" target="_blank">Thingiverse</a></p>
+<p><a href="https://mas.to/@dereksgc" target="_blank">Mastodon</a> - <a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> - <a href="https://github.com/sgcderek" target="_blank">GitHub</a> - <a href="https://www.thingiverse.com/derekcz/designs" target="_blank">Thingiverse</a> - <a href="https://twitter.com/dereksgc" target="_blank">Twitter</a></p>
 <p><img src="/images/logo-white.png" width="10%" align="center" /></p>
 <p>If you would like to support me and what I do, consider visiting my <a href="https://ko-fi.com/dereksgc" target="_blank">Ko-fi</a> page. Anything helps. Special thanks to;</p>
 <p><span style="color: #00994d;">microp11 - thebaldgeek - Xerbo - Whatwhatphysics - yakko warner - BackHive - Carl Reinemann - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente</span></p>
