--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 
 <h2>Blog articles and videos</h2>
 <p style="line-height: 1.8;">
+<a href="https://www.youtube.com/watch?v=YouUT3JSOw0">[Video] DRO Ku-band LNB test and teardown</a><br />
+<a href="https://www.youtube.com/watch?v=-c7CKlyPw-0">[Video] $4 PLL Ku-band LNB test and teardown</a><br />
+<a href="https://www.youtube.com/watch?v=eDGEGndEQUg">[Video] Connecting a Ku-band LNB to an SDR</a><br />
+<a href="https://www.youtube.com/watch?v=PKCbgzmyRy8">[Video] How a dish antenna works</a><br />
 <a href="https://www.youtube.com/watch?v=FCzozVMxCFs">[Video] The V-dipole antenna</a><br />
 <a href="/blog/noaa-21-briefing.html">All you need to know about the upcoming NOAA-21 satellite</a><br />
 <a href="https://www.youtube.com/watch?v=8S4qm2YeQQw" target="_blank">[Video] Decoding high-quality images from Meteor-M LRPT</a><br />
