--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <h1>Derek OK9SGC</h1>
 
 <p>Welcome to my site. Here you will find a random assortment of information and topics related to amateur radio, with a heavy focus on amateur satellite reception. To see more of my content or to contact me, check out my social media links below;</p>
-<p><a href="https://mas.to/@dereksgc" target="_blank">Mastodon</a> - <a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> - <a href="https://github.com/sgcderek" target="_blank">GitHub</a> - <a href="https://www.thingiverse.com/derekcz/designs" target="_blank">Thingiverse</a> - <a href="https://twitter.com/dereksgc" target="_blank">Twitter</a></p>
-<p><img src="/images/logo-white.png" width="10%" align="center" /></p>
+<p><a href="https://mas.to/@dereksgc" target="_blank">Mastodon</a> - <a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> - <a href="https://github.com/sgcderek" target="_blank">GitHub</a> - <a href="https://www.thingiverse.com/derekcz/designs" target="_blank">Thingiverse</a> - <a href="https://twitter.com/dereksgc" target="_blank">Twitter</a> - <a href="/blog/nokia-3310.html#number">SMS?</a></p>
 <p>If you would like to support me and what I do, consider visiting my <a href="https://ko-fi.com/dereksgc" target="_blank">Ko-fi</a> page. Anything helps. Special thanks to;</p>
 <p><span style="color: #00994d;">microp11 - thebaldgeek - Xerbo - Whatwhatphysics - yakko warner - BackHive - Carl Reinemann - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente</span></p>
 
@@ -23,12 +22,13 @@
 
 <p style="line-height: 1.8;">
 <a href="/tools/helix-calc.html">Helical antenna calculator</a><br />
-<a href="/tools/ATA.html">Asymmetric turnstile antenna</a></p>
+</p>
 
 <hr class="solid">
 
 <h2>Blog articles and videos</h2>
 <p style="line-height: 1.8;">
+<a href="/blog/nokia-3310.html">Nokia 3310 USB-C and battery modification</a><br />
 <a href="https://www.youtube.com/watch?v=YouUT3JSOw0" target="_blank">[Video] DRO Ku-band LNB test and teardown</a><br />
 <a href="https://www.youtube.com/watch?v=-c7CKlyPw-0" target="_blank">[Video] $4 PLL Ku-band LNB test and teardown</a><br />
 <a href="https://www.youtube.com/watch?v=eDGEGndEQUg" target="_blank">[Video] Connecting a Ku-band LNB to an SDR</a><br />
